--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+et-xmlfile==1.1.0
 numpy==2.0.0
+openpyxl==3.1.4
 pandas==2.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 six==1.16.0
 tzdata==2024.1
+Unipath==1.1
+
+#intalar python3-tk en debian por comando: sudo apt-get install python3-tk
